--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "autoload": {
         "psr-0": {
-            "mnhcc": "src/"
+            "MNHcC": "src/"
         },
         "classmap": [
             "./Module.php"
