--- a/composer.json
+++ b/composer.json
@@ -38,8 +38,8 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "zendframework/zend-eventmanager": "*",
-        "zendframework/zend-config": "*",
+        "zendframework/zend-eventmanager": "~2.6.2 || ~3.0",
+        "zendframework/zend-config": "~2.6 || ~3.0",
         "zendframework/zend-mvc": "~2.7 || ~3.0",
         "mnhcc/zendbase": "dev-master"
     },
