--- a/composer.json
+++ b/composer.json
@@ -38,10 +38,10 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "zendframework/zend-eventmanager": "~2.6.2 || ^3.0",
-        "zendframework/zend-config": "~2.6 || ^3.0",
-        "zendframework/zend-mvc": "~2.7 || ^3.0",
-        "mnhcc/zendbase": "~0.4.1-dev || ^1.0"
+        "zendframework/zend-eventmanager": "^2.6 || ^3.0",
+        "zendframework/zend-config": "^2.6 || ^3.0",
+        "zendframework/zend-mvc": "^2.7 || ^3.0",
+        "mnhcc/zendbase": "^0.4.1-dev || ^1.0"
     },
     "autoload": {
         "psr-4": {
