--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "SEO Route, SEO Segment",
     "version": "0.9.3-dev",
     "type": "module",
-    "license": "MIT",
+    "license": "BSD",
     "tags": [
         "zend framework",
         "zf2",
@@ -37,7 +37,8 @@
         }
     ],
     "require": {
-        "php": ">=5.6.0",
+        "php": "^5.6 || ^7.0",
+        
         "zendframework/zend-eventmanager": "^2.6 || ^3.0",
         "zendframework/zend-config": "^2.6 || ^3.0",
         "zendframework/zend-mvc": "^2.7 || ^3.0",
@@ -45,14 +46,13 @@
         "mnhcc/zendbase": "^0.4.1-dev || ^1.0"
     },
     "require-dev": {
-        "PHPUnit": ""
+        "phpunit/phpunit": "^4.0 || ^5.0",
+        "zendframework/zend-test": "^2.5",
+        "zendframework/zend-modulemanager": "^2.7.1"
     },
     "autoload": {
         "psr-4": {
-            "MNHcC\\ExtendedZendRoutes\\": "src/MNHcC/ExtendedZendRoutes/"
-        },
-        "classmap": [
-            "src/Module.php"
-        ]
+            "MNHcC\\ExtendedZendRoutes\\": "src/"
+        }
     }
 }
