--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,10 @@
     "require-dev": {
         "phpunit/phpunit": "^4.0 || ^5.0",
         "zendframework/zend-test": "^2.5",
-        "zendframework/zend-modulemanager": "^2.7.1"
+        "zendframework/zend-modulemanager": "^2.7.1",
+        "zendframework/zend-serializer": "^2.8",
+        "zendframework/zend-math": "^2.6 || ^3.0",
+        "zendframework/zend-log": "^2.9"
     },
     "autoload": {
         "psr-4": {
