--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         "zendframework/zend-config": "^2.6 || ^3.0",
         "zendframework/zend-mvc": "^2.7 || ^3.0",
         "mnhcc/zend3bchelper": "^0.4-dev || ^1.0",
-        "mnhcc/zendbase": "^0.4.1-dev || ^1.0"
+        "mnhcc/zendbase": "~0.5-dev || ^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0 || ^5.0",
