--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "mnhcc/extendedzendroutes",
     "description": "SEO Route, SEO Segment",
-    "version": "0.9.3-dev",
+    "version": "0.9.4-dev",
     "type": "module",
     "license": "BSD",
     "tags": [
@@ -21,7 +21,7 @@
     ],
     "extra": {
         "branch-alias": {
-            "dev-master": "0.9.3-dev"
+            "dev-master": "0.9.4-dev"
         }
     },
     "minimum-stability": "stable",
@@ -38,12 +38,12 @@
     ],
     "require": {
         "php": "^5.6 || ^7.0",
-        
         "zendframework/zend-eventmanager": "^2.6 || ^3.0",
         "zendframework/zend-config": "^2.6 || ^3.0",
         "zendframework/zend-mvc": "^2.7 || ^3.0",
         "mnhcc/zend3bchelper": "^0.4-dev || ^1.0",
-        "mnhcc/zendbase": "~0.5-dev || ^1.0"
+        "mnhcc/zendbase": "^0.5-dev || ^1.0"
+
     },
     "require-dev": {
         "phpunit/phpunit": "^4.0 || ^5.0",
